         m4 directory; acinclude.m4 has been removed (more from patch #3575831)
         (Sergio).
20121016 Makefile.am: distribute m4 directory and contents with the release
         tarball (Fred).
20121028 sound/coreaudiosound.c: migrate away from some deprecated APIs (Fred).
20121107 ui/xlib/{Makefile.am,xstatusbar.pl}: fix the build when source and
         build trees are different (VPATH) (bug #3584527) (Sergio).
20121111 Makefile.am,configure.ac,ui/win32/installer/fuse.nsi.in: enhance win32
         installation and distribution (patch #3580843) (Sergio).
20121112 README,fuse.c: enhance win32 installation instructions (more from
         patch #3580843) (Sergio).
20121116 INSTALL,README: move installation instructions to INSTALL file (more
         from patch #3580843) (Sergio).
20121116 Makefile.am: distribute INSTALL with distribution (Fred).
20121118 Makefile.am: use proper automake comment rather than m4 comment
         (Sergio).
20121118 configure.ac: don't double check for zlib header (bug #3586255)
         (Sergio).
20121122 sound.c: correct feedback in AY noise generator (Patrik Rak).
20121122 pokefinder/{pokemem.[ch]},ui/gtk/pokemem.c,ui/widget/pokemem.c,
         ui/win32/pokemem.c: fix presumed typo in pokemem_trainer_deactivate
         (Fred).
20121123 Makefile.am,configure.ac: don't interrupt COMPAT_OSNAME log with other
         checks. Avoid searching for windres when not building for Windows.
         Remove --without-windres flag, previously used as a workaround
         (Sergio).
20121125 movie.[ch]: make movie_start take a const char* filename (Fred).
20121125 ui/win32/{debugger.c,win32ui.c}: properly resize monospaced font with
         high DPI settings. Dynamically set initial width of some columns in the
         debugger on win32 UI (patch 3488036) (Sergio).
20121125 ui/win32/debugger.c: fix value used for breaking down the emulation
         when double-clicking the stack pane in the debugger on win32 UI
         (Sergio).