@@ -1,7 +1,7 @@
 /* opus.h: Routines for handling the Opus Discovery interface
    Copyright (c) 2005-2009 Stuart Brady, Fredrick Meunier
 
-   $Id: opus.h 4012 2009-04-16 12:42:14Z fredm $
+   $Id$
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
