@@ -1,7 +1,7 @@
 /* specdrum.h: Routines for handling the Specdrum Drum Kit
    Copyright (c) 2011 Jon Mitchell
 
-   $Id:$
+   $Id$
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
